# RayTracing

./: CMakeLists.txt  Camera.cpp  Camera.h  Common.h  Light.cpp  Light.h  Main.cpp  Object.cpp  Object.h  RGBColor.cpp  RGBColor.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h
